# ticket-system-mock

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  LICENSE.md  Makefile  README.md  UBIQUITOUS_LANGUAGE.md
.devcontainer/: AGENTS.md  Dockerfile  README.md  requirements.txt
.devcontainer/development/: devcontainer-lock.json  devcontainer.json  (+2 more)
deploy/: AGENTS.md
docs/: AGENTS.md
scenarios/: AGENTS.md  README.md  pyproject.toml
scenarios/issue-triage-with-n8n/: README.md  seed.py
scenarios/issue-triage-with-n8n/assets/: Issue Triage Workflow.json
scripts/: build_n8n_dev_package.bash  build_n8n_for_devserver.bash  build_ticketsystemmock_for_devserver.bash  clean_directories.bash  fetch_static_files.bash  run_n8n_smoke_test.bash  setup_production_test_instance.bash  validate_bash.bash  validate_n8n_package.bash  validate_ticketsystemmock_package.bash  validate_yaml.bash
src/: AGENTS.md
src/ticketsystemmock/: .coveragerc  README.md  pyproject.toml
src/ticketsystemmock/tests/: tests_sdk.py
src/ticketsystemmock/ticketsystemmock/: __init__.py  client.py  endpoints.py  enums.py  exceptions.py  transport.py
src/ticketsystemmock/ticketsystemmock/models/: __init__.py  base.py  board.py  collection.py  dashboard.py  group.py  instance_reset.py  issue.py  issue_attachment.py  issue_category.py  issue_comment.py  issue_history_entry.py  issue_summary.py  issue_transition.py  system.py  user.py  user_summary.py  workflow_state_auto_assignment_rule.py
src/ticketsystemmock/ticketsystemmock/resources/: __init__.py  admin.py  attachments.py  auth.py  board.py  comments.py  dashboard.py  helpers.py  issues.py  profiles.py  reference.py  system.py
(+253 files in other folders)
