[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ticketsystemmock"
version = "0.1.0"
description = "Python SDK for the Ticket System Mock REST API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28,<0.29",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["ticketsystemmock*"]